@startuml

title __FORINSTRUCTOR's Class Diagram__\n

  package  {
    package JavaFinalFx {
      package JavaFinalFx.forInstructor {
        class ForInstructor {
            - label : Label
            - tableUser : TableView<ScoreDetails>
            - columnId : TableColumn<ScoreDetails, Integer>
            - columnFirst : TableColumn<ScoreDetails, String>
            - columnTest1 : TableColumn<ScoreDetails, Integer>
            - columnTest2 : TableColumn<ScoreDetails, Integer>
            - columnTest3 : TableColumn<ScoreDetails, Integer>
            - columnTest4 : TableColumn<ScoreDetails, Integer>
            - columnTest5 : TableColumn<ScoreDetails, Integer>
            - columnTest6 : TableColumn<ScoreDetails, Integer>
            - columnTest7 : TableColumn<ScoreDetails, Integer>
            - columnTest8 : TableColumn<ScoreDetails, Integer>
            - columnTest9 : TableColumn<ScoreDetails, Integer>
            - columnTest10 : TableColumn<ScoreDetails, Integer>
            - columnAve : TableColumn<ScoreDetails, Integer>
            - textFieldId : TextField
            - btnLoad : Button
            - btnMartAdd : Button
            - btnDelete : Button
            - btnUpdate : Button
            - combo : ComboBox<?>
            - btnAge : Button
            {static} ~ arrStudentAnswer : ArrayList<String>
            {static} ~ arrRightAnswer : ArrayList<String>
            - studentAnswer : Scanner
            - rightAnswer : Scanner
            - scoredata : ObservableList<ScoreDetails>
            ~ conn : Connection
            ~ stmt : Statement
            ~ event : ActionEvent
            ~ score : int
            ~ studentId : int
            ~ studentName : String
            ~ testName : String
            ~ test1 : int
            ~ test2 : int
            ~ test3 : int
            ~ test4 : int
            ~ test5 : int
            ~ test6 : int
            ~ test7 : int
            ~ test8 : int
            ~ test9 : int
            ~ test10 : int
            ~ ave : int
            + readfile()
            + mark()
            + getStudentId()
            + getStudentName()
            + getTestName()
            + initialize()
            - loadDataFromDatabase()
            + saveDataFromDatabase()
            + updateDataFromDatabase()
            + deleteDataFromDatabase()
            {static} + main()
        }
      }
    }
  }
  

  package  {
    package JavaFinalFx {
      package JavaFinalFx.forInstructor {
        class ScoreDetails {
            - id : IntegerProperty
            - first : StringProperty
            - test1 : IntegerProperty
            - test2 : IntegerProperty
            - test3 : IntegerProperty
            - test4 : IntegerProperty
            - test5 : IntegerProperty
            - test6 : IntegerProperty
            - test7 : IntegerProperty
            - test8 : IntegerProperty
            - test9 : IntegerProperty
            - test10 : IntegerProperty
            - ave : IntegerProperty
            + ScoreDetails()
            + getId()
            + idProperty()
            + getFirst()
            + firstProperty()
            + getTest1()
            + test1Property()
            + getTest2()
            + test2Property()
            + getTest3()
            + test3Property()
            + getTest4()
            + test4Property()
            + getTest5()
            + test5Property()
            + getTest6()
            + test6Property()
            + getTest7()
            + test7Property()
            + getTest8()
            + test8Property()
            + getTest9()
            + test9Property()
            + getTest10()
            + test10Property()
            + getAve()
            + aveProperty()
            + setId()
            + setFirst()
            + setTest1()
            + setTest2()
            + setTest3()
            + setTest4()
            + setTest5()
            + setTest6()
            + setTest7()
            + setTest8()
            + setTest9()
            + setTest10()
            + setAve()
            + toString()
        }
      }
    }
  }
  

  ForInstructor -up-|> Initializable
  ForInstructor o-- DbConnection : dc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
